[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bq-bench"
version = "0.1.0"
description = "A tool for running queries in BigQuery."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "google-cloud-bigquery",
    "google-cloud-bigquery-storage",
    "pyarrow",
]
license = {file = "LICENSE"}

[project.scripts]
bq-bench = "bq_bench:main"

[tool.setuptools.packages.find]
where = ["src"]
